--- a/_includes/slides.html
+++ b/_includes/slides.html
@@ -5,13 +5,13 @@
       <img src="{{site.baseurl}}/assets/img/{{item.background_image}}">
     </div>
     <div class='text-box top' style="color: {{item.text_color}};">
-      <p>{{ item.top }}</p>
+      {{ item.top }}
     </div>
     <div class='text-box middle' style="color: {{item.text_color}};">
-      <p>{{ item.middle }}</p>
+      {{ item.middle }}
     </div>
     <div class='text-box bottom' style="color: {{item.text_color}};">
-      <p>{{ item.bottom }}</p>
+      {{ item.bottom }}
     </div>
   </div>
   {% endfor %}
