--- a/_layouts/show.html
+++ b/_layouts/show.html
@@ -2,18 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <title>{{ page.title }}</title>
-
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/slides.css">
 
     <script type="text/javascript" src="/assets/js/jquery-3.3.1.slim.min.js"></script>
-    <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/assets/js/slides.js"></script>
   </head>
   <body>
-    <div class="container">
     {{ content }}
-    </div>
   </body>
 </html>
