--- a/assets/css/slides.css
+++ b/assets/css/slides.css
@@ -14,6 +14,16 @@ body{
   height: 100%;
   width: 100%;
 }
+.slide.text-color-white .text-box{
+  color: white;
+  text-shadow: 0px 0px 8px #000000;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.slide.text-color-black .text-box{
+  color: black;
+  text-shadow: 0px 0px 8px #ffffff;
+  background-color: rgba(255, 255, 255, 0.5);
+}
 .image-box{
   position: absolute;
   height: auto;
@@ -34,8 +44,8 @@ body{
   width: 100%;
   text-align: center;
   font-size: 8vh;
-  text-shadow: 2px 2px 5px #ffffff;
 }
+
 .text-box.top{
       top: 5%;
 }
