autoplay mode! and maybe fixed image url

--- a/_layouts/show.html
+++ b/_layouts/show.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="/assets/css/slides.css">
 
     <script type="text/javascript" src="/assets/js/jquery-3.3.1.slim.min.js"></script>
+    <script type="text/javascript" src="/assets/js/underscore-min.js"></script>
     <script type="text/javascript" src="/assets/js/slides.js"></script>
+    <script type="text/javascript">
+      window.site_url = "{{site.url}}"
+    </script>
   </head>
   <body>
     {{ content }}
