fullscreen mode and better flow

--- a/_layouts/show.html
+++ b/_layouts/show.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/slides.css">
-
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery-3.3.1.slim.min.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/underscore-min.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/slides.js"></script>
     <script type="text/javascript">
       window.site_url = "{{site.url}}"
       window.site_base_url = "{{site.baseurl}}"
+      function toggleFullScreen() {
+        var doc = window.document;
+        var docEl = doc.documentElement;
+
+        var requestFullScreen = docEl.requestFullscreen || docEl.mozRequestFullScreen || docEl.webkitRequestFullScreen || docEl.msRequestFullscreen;
+        var cancelFullScreen = doc.exitFullscreen || doc.mozCancelFullScreen || doc.webkitExitFullscreen || doc.msExitFullscreen;
+
+        if(!doc.fullscreenElement && !doc.mozFullScreenElement && !doc.webkitFullscreenElement && !doc.msFullscreenElement) {
+          requestFullScreen.call(docEl);
+        }
+        else {
+          cancelFullScreen.call(doc);
+        }
+      }
     </script>
   </head>
   <body>
